feat(server) #4895: complete the OpenAPI spec to match the registered HTTP route surface (#5614)
(cherry picked from commit 6f1260666e8a00e021c148ee9db2c2bb6ff8ce87)